k8s/manual/ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: contract-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2 # Rewrite the path correctly
spec:
  ingressClassName: nginx
  rules:
  - host: "contract.$hostip.nip.io"
    http:
      paths:
      - path: /producer(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: producer
            port:
              number: 8081
      - path: /consumer(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: consumer
            port:
              number: 8085
      - path: /activemq(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: activemq
            port:
              number: 8161
      - path: /zipkin(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: zipkin
            port:
              number: 9411
